# apps/api/src/rooms/rooms.controller.ts
@@ -1,0 +1,44 @@
+import {
+  Controller,
+  Get,
+  Post,
+  Body,
+  Patch,
+  Param,
+  Delete,
+} from '@nestjs/common'
+import { RoomsService } from './rooms.service'
+import { CreateRoomDto } from './dto/create-room.dto'
+import { UpdateRoomDto } from './dto/update-room.dto'
+import { CurrentUser } from '@/auth/decorator/current-user.decorator'
+import { User } from '@/users/user.entity'
+
+@Controller('rooms')
+export class RoomsController {
+  constructor(private readonly roomsService: RoomsService) {}
+
+  @Post()
+  create(@CurrentUser() user: User, @Body() createRoomDto: CreateRoomDto) {
+    return this.roomsService.create(user.id, createRoomDto)
+  }
+
+  @Get()
+  findAll() {
+    return this.roomsService.findAll()
+  }
+
+  @Get(':id')
+  findOne(@Param('id') id: string) {
+    return this.roomsService.findOne(+id)
+  }
+
+  @Patch(':id')
+  update(@Param('id') id: string, @Body() updateRoomDto: UpdateRoomDto) {
+    return this.roomsService.update(+id, updateRoomDto)
+  }
+
+  @Delete(':id')
+  remove(@Param('id') id: string) {
+    return this.roomsService.remove(+id)
+  }
+}
